<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/topBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/example_name"
                app:titleTextColor="?attr/colorOnSurface"
                app:titleCentered="false"
                app:navigationIcon="@drawable/ic_arrow_left"
                app:navigationIconTint="?attr/colorOnSurface"
                app:menu="@menu/top_app_bar"
                />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>




    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/hint_name"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_account"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/example_name"
                    android:textSize="16sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/hint_phone"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_cellphone_check"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_name"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="16sp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:id="@+id/dropDownPhoneType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hint_select"
                    >
                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_mobile"
                        android:inputType="none"
                        app:simpleItems="@array/simple_items"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAddress"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/address"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                app:endIconCheckable="true"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_bookmark_outline"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_address"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/linearLayoutCityCountry"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/hint_city"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tokyo"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/hint_country"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/japan"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputBirthday"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/date"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                app:endIconCheckable="true"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_calendar_badge"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_birthday"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNotes"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/notes"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                app:endIconCheckable="true"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_microphone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_notes"
                    android:fontFamily="@font/roboto"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--    чтобы кнопка не перекрывала поле Notes в ландшафтном режиме -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputNotes"
                />

        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorSecondary"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>