<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartActivity"
    android:padding="10dp"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/topBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/cart"
                app:titleTextColor="?attr/colorOnSurface"
                app:titleCentered="false"
                app:navigationIcon="@drawable/ic_arrow_left"
                app:navigationIconTint="?attr/colorOnSurface"
                />


        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/btnClose"
            android:layout_height="match_parent"
            android:layout_width="64dp"

            style="?attr/materialIconButtonStyle"
            app:icon="@drawable/ic_close_circle"

            app:iconTint="?attr/colorOnSurface"
            app:iconSize="32dp"
            android:layout_gravity="end"
            app:iconGravity="end"
            android:text=""
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/textViewCount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        android:text="@string/example_cartItemsCount"
        android:gravity="center_vertical"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"
        />

    <ListView
        app:layout_constraintTop_toBottomOf="@+id/textViewCount"
        android:id="@+id/listItems"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/layout_list_item"
        android:dividerHeight="1dp"
        android:divider="?attr/colorOnSurface"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/order_total"
                style="@style/TextViewOrder"
                android:textSize="20sp"
                />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="$175.50"
                style="@style/TextViewPrice"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/subtotal"
                style="@style/TextViewOrder"
                />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="$140"
                style="@style/TextViewPrice"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/shipping"
                style="@style/TextViewOrder"
                />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="$25"
                style="@style/TextViewPrice"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/tax"
                style="@style/TextViewOrder"
                />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="$10.50"
                style="@style/TextViewPrice"
                />

        </LinearLayout>


        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/buttonPlaceOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/place_order"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorSecondary"
            app:icon="@drawable/ic_emoticon"
            app:iconTint="?attr/colorOnPrimary"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>