<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/labelLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:inputType="none"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="8dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/login"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:endIconCheckable="true"
        app:endIconMode="custom"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ivanpetrov"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/password"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:endIconCheckable="true"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_eye_outline"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="**********"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonResetPassword"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/reset_my_password"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        >

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="invisible"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/login"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/cancel"
            />

    </LinearLayout>

</LinearLayout>